--- a/20160404142551.md
+++ b/20160404142551.md
@@ -13,3 +13,5 @@ usb 연결을 할 때 마다 새로운 창이 튀어 나오기 때문에
    (예, Android File Transfer Agent 수동.app)
 5. ~/Library/Application Support/Google/Android File Transfer 에 있는 'Android File Transfer Agent' 이름을 변경한다
    (예, Android File Transfer Agent 수동.app)
+
+실행이 필요할 땐, Spotlight검색에서 'Android File' 까지만 입력하면 곧바로 실행할 수 있다.
